image distortion fixed

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -258,12 +258,12 @@
       width: 100%;
       max-width: var(--project-media-max);
       height: var(--project-media-height);
-      display: flex;
-      justify-content: center;
-      align-items: center;
       position: relative;
       border-radius: 1.2rem;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       // canvas {
       //   position: absolute;
@@ -274,31 +274,32 @@
       // }
 
       img {
+        position: absolute;
+        inset: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
         border-radius: inherit;
+        transition: opacity 0.4s ease;
+      }
 
-        &:hover {
-          &:nth-child(2) {
-            opacity: 1;
-          }
-        }
+      img:first-of-type {
+        opacity: 1;
+        z-index: 1;
+      }
 
-        &:nth-child(1) {
-          position: absolute;
-          top: 0;
-          left: 0;
+      img:last-of-type {
+        opacity: 0;
+        z-index: 2;
+      }
+
+      &:hover {
+        img:first-of-type {
           opacity: 0;
-          transition: opacity 0.3s;
         }
-        &:nth-child(2) {
-          position: absolute;
-          top: 0;
-          left: 0;
-          opacity: 0;
-          transition: opacity 0.3s;
+        img:last-of-type {
+          opacity: 1;
         }
       }
     }
